--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 flask
+flask-cors
 pydub
 gunicorn
-flask-cors
-# Add any other libraries you used (e.g., requests, python-dotenv)
-# If you used pydub, you will also need to manually install FFmpeg on Render (see Step 3)
+# Plus any other libraries for Gemini or other utilities
