--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
-// --- START OF FILE package.json (MODIFIED) ---
 {
   "name": "audioamncer",
-  // ...
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "engines": {
+    "node": ">=20.0.0" 
+  },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
-    // REMOVE: "vite": "^7.2.2" <-- Should be a dev dependency
+    "react-dom": "^19.2.0",
+    "vite": "^7.2.2",
+    "@vitejs/plugin-react": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.2", // <-- ADDED/MOVED
-    "@vitejs/plugin-react": "^4.4.1" // <-- REQUIRED ADDITION
+    "typescript": "^5.9.3"
   }
 }
-// --- END OF FILE package.json (MODIFIED) ---
