--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=20.0.0" 
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "vite": "^7.2.2",
-    "@vitejs/plugin-react": "^4.4.1"
+    "vite": "^7.2.2"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.1",
     "typescript": "^5.9.3"
   }
 }
